About part update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nike - aaa</title>
+    <title>Nike - JUST DO IT</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -286,12 +286,17 @@
         </div>
         <div class="about_text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
-            repudiandae ducimus facere! Cumque, tenetur! Ipsum, veritatis minima
-            ab dolores ipsam maxime placeat. Voluptates recusandae itaque
-            necessitatibus eveniet perspiciatis culpa placeat nisi, ipsa quo
-            mollitia laboriosam praesentium ipsam cupiditate officia consequatur
-            eos error nesciunt. Harum, nemo.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+            fugiat reiciendis porro, amet corporis distinctio quia, voluptatem
+            perspiciatis nostrum aspernatur ratione nulla delectus facere fuga
+            et accusamus eum voluptate a eveniet praesentium. Culpa et
+            similique, error modi omnis inventore officia expedita nihil.
+            Dignissimos, fugiat rem. Sit, dolore laboriosam optio fuga delectus
+            atque repellendus? Illum, ad, alias obcaecati perferendis temporibus
+            soluta unde ea atque nulla, natus magni nemo numquam veritatis?
+            Vitae saepe iste porro cupiditate minima tempore maxime at doloribus
+            facilis quibusdam quis neque aspernatur modi, repellendus voluptas
+            nostrum unde cum.
           </p>
         </div>
       </div>
@@ -303,5 +308,7 @@
         }
       </script>
     </div>
+
+    <!-- Review -->
   </body>
 </html>
