about part update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nike - aaa</title>
+    <title>Nike - Just Do It</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -310,5 +310,21 @@
     </div>
 
     <!-- Review -->
+
+    <div class="review" id="Review">
+      <h1>Customer's <span>review</span></h1>
+
+      <div class="review_box">
+        <div class="review_card">
+          <div class="card_top">
+            <div class="profile">
+              <div class="profile_image">
+                <img src="image/girl_dp1.jpg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
